Se realiza la actualización de las vistas generarSoporteView.js, funcionamientoView.js y eliminarUsuarioView.js

--- a/proyectoweb/WebContent/index.html
+++ b/proyectoweb/WebContent/index.html
@@ -28,8 +28,11 @@
     <div class="navbar-inner">
       <ul class="nav">
         <li><a href="#" >Home</a></li>
-        <li ><a href="#/projects" >Projects</a></li>
+        <li><a href="#/projects" >Projects</a></li>
         <li><a href="#/users">Contributors</a></li>
+        <li><a href="#/otros">funcionamiento</a></li>
+        <li><a href="#/otros">generarSoporte</a></li>
+        <li><a href="#/usuario">eliminarUsuario</a></li>
       </ul>
     </div>
   </div>
