Actualizacion de los views.
Los views actualizados son Añadir_Marca, Listar_Marca, Marca y
Contacto_ayuda

--- a/proyectoweb/WebContent/index.html
+++ b/proyectoweb/WebContent/index.html
@@ -33,6 +33,10 @@
         <li><a href="#/otros">funcionamiento</a></li>
         <li><a href="#/otros">generarSoporte</a></li>
         <li><a href="#/usuario">eliminarUsuario</a></li>
+        <li><a href="#/ListadoMarcas">ListarMarca</a></li>
+        <li><a href="#/AñadirMarca">AñadirMarca</a></li>
+        <li><a href="#/Marca">Marca</a></li>
+        <li><a href="#/contactoAyud">Contacto_Ayuda</a></li>
       </ul>
     </div>
   </div>
